test-aws/aws_configs/eu-west-2/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-9cc418f5",
     "NetworkAclId": "acl-5735cf3e",
     "SubnetId": "subnet-825e5ec8"
    },
    {
     "NetworkAclAssociationId": "aclassoc-9dc418f4",
     "NetworkAclId": "acl-5735cf3e",
     "SubnetId": "subnet-d8c22da3"
    },
    {
     "NetworkAclAssociationId": "aclassoc-6515ee0e",
     "NetworkAclId": "acl-5735cf3e",
     "SubnetId": "subnet-b708ccde"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-5735cf3e",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-e618e38f"
  }
 ]
}
